fix overflow problem

--- a/src/components/home/Header/index.scss
+++ b/src/components/home/Header/index.scss
@@ -2,95 +2,96 @@
 @import "../../../mixins.scss";
 
 .topbar {
-    justify-content: flex-start;
-    &__bg {
-        position: relative;
-        background-image: url(./banner.png);
-        height: 800px;
-        width: 100%;
-        background-repeat: no-repeat;
-        background-size: cover;
-        // &::after {
-        //     content: "";
-        //     position: absolute;
-        //     display: block;
-        //     width: 100%;
-        //     height: 100%;
-        //     background: linear-gradient(#000, transparent);
-        //     top: 0;
-        //     left: 0;
-        //     z-index: 0;
-        // }
+  justify-content: flex-start;
+  &_zindexed {
+    position: relative;
+    z-index: 1;
+  }
+  &__bg {
+    position: relative;
+    background-image: url(./banner.png);
+    height: 800px;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    &::after {
+      content: "";
+      position: absolute;
+      display: block;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(#000, transparent);
+      top: 0;
+      left: 0;
+      z-index: 0;
     }
-    &__wrapper-nav {
-        display: grid;
-        grid-template-columns: 70% 30%;
-        margin-bottom: 100px;
-    }
-    &__social {
-        &-wrap {
-            width: 30px;
-            height: 35px;
-            margin: 0 10px;
-            &_youtube {
-                width: 50px;
-                height: 50px;
-            }
-        }
-        &-img {
-            transition: all 0.5s ease;
-        }
-    }
-    &__nav {
-        z-index: 1;
-    }
-    &__logo {
+  }
+  &__wrapper-nav {
+    display: grid;
+    grid-template-columns: 70% 30%;
+    margin-bottom: 100px;
+  }
+  &__social {
+    &-wrap {
+      width: 30px;
+      height: 35px;
+      margin: 0 10px;
+      &_youtube {
         width: 50px;
         height: 50px;
-        margin-right: 30px;
+      }
     }
-    &__icon {
-        width: 35px;
-        height: 35px;
-        margin-right: 25px;
+    &-img {
+      transition: all 0.5s ease;
     }
-    &__box {
-        padding: 30px 0 0 60px;
-        &-item {
-            padding-right: 50px;
-        }
+  }
+  &__logo {
+    width: 50px;
+    height: 50px;
+    margin-right: 30px;
+  }
+  &__icon {
+    width: 35px;
+    height: 35px;
+    margin-right: 25px;
+  }
+  &__box {
+    padding: 30px 0 0 60px;
+    &-item {
+      padding-right: 50px;
     }
-    &__main {
-        padding: 30px 150px;
-        &-title {
-            font-size: 70px;
-            line-height: 61px;
-        }
+  }
+  &__main {
+    padding: 30px 150px;
+    &-title {
+      font-size: 70px;
+      line-height: 61px;
     }
+  }
 }
 $an: 0;
 $topbar__social-wrap: 7;
 
 @keyframes pulse {
-    0% {
-        transform: scale(0.7);
-    }
-    50% {
-        transform: scale(0.8);
-    }
-    75% {
-        transform: scale(0.9);
-    }
-    100% {
-        transform: scale(1);
-    }
+  0% {
+    transform: scale(0.7);
+  }
+  50% {
+    transform: scale(0.8);
+  }
+  75% {
+    transform: scale(0.9);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 
 @while $an <= $topbar__social-wrap {
-    .an:nth-child(#{$an}) {
-        display: inline-block;
-        animation: pulse 4s infinite ease-in-out;
-        animation-delay: #{$an/3}s;
-    }
-    $an: $an + 1;
+  .an:nth-child(#{$an}) {
+    display: inline-block;
+    animation: pulse 4s infinite ease-in-out;
+    animation-delay: #{$an/3}s;
+  }
+  $an: $an + 1;
 }
